--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -26,6 +26,10 @@ body {
   }
 }
 
+.imagesFit {
+  object-fit: contain;
+}
+
 .noUi-horizontal .noUi-handle {
   height: 16px !important;
   width: 16px !important;
