--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -24,6 +24,9 @@ body {
     outline: none !important;
     font-family: $font-family-primary;
   }
+  input{
+    font-size: 16px !important;
+  }
 }
 
 .imagesFit {
