--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -33,6 +33,10 @@ body {
   object-fit: contain;
 }
 
+.createOrder_inputs{
+  margin-bottom: 0.25rem !important;
+}
+
 .noUi-horizontal .noUi-handle {
   height: 16px !important;
   width: 16px !important;
