New Design Dashboard 1.0

--- a/src/styles/config/default/_theme-light.scss
+++ b/src/styles/config/default/_theme-light.scss
@@ -19,10 +19,10 @@
   
   //vertical dark
   --#{$variable-prefix}vertical-menu-bg-dark:                 #{$primary};
-  --#{$variable-prefix}vertical-menu-item-color-dark:         #abb9e8;
+  --#{$variable-prefix}vertical-menu-item-color-dark:         #ffffff;
   --#{$variable-prefix}vertical-menu-item-hover-color-dark:   #{$white};
   --#{$variable-prefix}vertical-menu-item-active-color-dark:  #{$white};
-  --#{$variable-prefix}vertical-menu-sub-item-color-dark:     #abb9e8;
+  --#{$variable-prefix}vertical-menu-sub-item-color-dark:     #dfdfdf;
   --#{$variable-prefix}vertical-menu-sub-item-hover-color-dark: #{$white};
   --#{$variable-prefix}vertical-menu-sub-item-active-color-dark: #{$white};
   --#{$variable-prefix}vertical-menu-title-color-dark:         #838fb9;
