--- a/src/styles/structure/_footer.scss
+++ b/src/styles/structure/_footer.scss
@@ -10,7 +10,7 @@
     color: $footer-color;
     left: $vertical-menu-width;
     height: $footer-height;
-    background-color: $footer-bg;
+    background-color: transparent;
 
     @media (max-width: 991.98px) {
         left: 0;
