--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -33,6 +33,10 @@ body {
   object-fit: contain;
 }
 
+.chargesTitles {
+  fill: black !important;
+}
+
 .createOrder_inputs{
   margin-bottom: 0.25rem !important;
 }
