--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -4,7 +4,8 @@
 
 .card {
     margin-bottom: $grid-gutter-width;
-    box-shadow: $card-box-shadow;
+    // box-shadow: $card-box-shadow;
+    filter: drop-shadow(0px 5px 30px rgba(0, 0, 0, 0.1));
 }
 
 .card-header {
