New Design Sidebar 1.0

--- a/src/styles/config/default/_theme-light.scss
+++ b/src/styles/config/default/_theme-light.scss
@@ -1,38 +1,40 @@
 // :root CSS variables
 
-:root{
+:root {
 
   // body
   --#{$variable-prefix}body-bg : #{$body-bg};
   --#{$variable-prefix}body-color: #{$body-color};
   --#{$variable-prefix}body-color-rgb: #{to-rgb($body-color)};
 
-    //vertical light
-  --#{$variable-prefix}vertical-menu-bg:                      #{$white};
-  --#{$variable-prefix}vertical-menu-item-color:              #{darken($gray-600, 10%)};
-  --#{$variable-prefix}vertical-menu-item-hover-color:        #{$primary};
-  --#{$variable-prefix}vertical-menu-item-active-color:       #{$primary};
-  --#{$variable-prefix}vertical-menu-sub-item-color:          #{darken($gray-600, 4%)};
-  --#{$variable-prefix}vertical-menu-sub-item-hover-color:    #{$primary};
-  --#{$variable-prefix}vertical-menu-sub-item-active-color:   #{$primary};
-  --#{$variable-prefix}vertical-menu-title-color:             #919da9;
-  
+  //vertical light
+  --#{$variable-prefix}vertical-menu-bg: #{$white};
+  --#{$variable-prefix}vertical-menu-item-color: #{darken($gray-600, 10%)};
+  --#{$variable-prefix}vertical-menu-item-hover-color: #{$primary};
+  --#{$variable-prefix}vertical-menu-item-active-color: #{$primary};
+  --#{$variable-prefix}vertical-menu-sub-item-color: #{darken($gray-600, 4%)};
+  --#{$variable-prefix}vertical-menu-sub-item-hover-color: #{$primary};
+  --#{$variable-prefix}vertical-menu-sub-item-active-color: #{$primary};
+  --#{$variable-prefix}vertical-menu-title-color: #919da9;
+
   //vertical dark
-  --#{$variable-prefix}vertical-menu-bg-dark:                 #{$primary};
-  --#{$variable-prefix}vertical-menu-item-color-dark:         #ffffff;
-  --#{$variable-prefix}vertical-menu-item-hover-color-dark:   #{$white};
-  --#{$variable-prefix}vertical-menu-item-active-color-dark:  #{$white};
-  --#{$variable-prefix}vertical-menu-sub-item-color-dark:     #dfdfdf;
+  --#{$variable-prefix}vertical-menu-bg-dark: #{$primary};
+  --#{$variable-prefix}vertical-menu-item-color-dark: #ffffff;
+  --#{$variable-prefix}vertical-menu-item-color-active: #ffffff;
+  --#{$variable-prefix}vertical-menu-item-color-inActive: rgba(255, 255, 255, 0.63);
+  --#{$variable-prefix}vertical-menu-item-hover-color-dark: #{$white};
+  --#{$variable-prefix}vertical-menu-item-active-color-dark: #{$white};
+  --#{$variable-prefix}vertical-menu-sub-item-color-dark: #dfdfdf;
   --#{$variable-prefix}vertical-menu-sub-item-hover-color-dark: #{$white};
   --#{$variable-prefix}vertical-menu-sub-item-active-color-dark: #{$white};
-  --#{$variable-prefix}vertical-menu-title-color-dark:         #838fb9;
+  --#{$variable-prefix}vertical-menu-title-color-dark: #838fb9;
 
   // Topbar - (Default Light)
-  --#{$variable-prefix}header-bg:  #{$white};
-  --#{$variable-prefix}header-item-color:  #e9ecef;
+  --#{$variable-prefix}header-bg: #{$white};
+  --#{$variable-prefix}header-item-color: #e9ecef;
   // Topbar - Dark
-  --#{$variable-prefix}header-bg-dark:  #{$primary};
-  --#{$variable-prefix}header-item-color-dark:  #b0c4d9;
+  --#{$variable-prefix}header-bg-dark: #{$primary};
+  --#{$variable-prefix}header-item-color-dark: #b0c4d9;
 
   // Topbar Search
   --#{$variable-prefix}topbar-search-bg: #f3f3f9;
@@ -51,20 +53,20 @@
 
   // twocolumn menu
   --#{$variable-prefix}twocolumn-menu-iconview-bg: #{$white};
-  --#{$variable-prefix}twocolumn-menu-bg:  #{$white};
+  --#{$variable-prefix}twocolumn-menu-bg: #{$white};
   // two column dark
   --#{$variable-prefix}twocolumn-menu-iconview-bg-dark: var(--#{$variable-prefix}vertical-menu-bg-dark);
-  --#{$variable-prefix}twocolumn-menu-bg-dark:  #{lighten($primary, 2%)};
+  --#{$variable-prefix}twocolumn-menu-bg-dark: #{lighten($primary, 2%)};
   --#{$variable-prefix}twocolumn-menu-item-color-dark: var(--#{$variable-prefix}vertical-menu-item-color-dark);
-  --#{$variable-prefix}twocolumn-menu-item-active-color-dark:  #{$white};
-  --#{$variable-prefix}twocolumn-menu-item-active-bg-dark:  #{rgba($white, .15)};
+  --#{$variable-prefix}twocolumn-menu-item-active-color-dark: #{$white};
+  --#{$variable-prefix}twocolumn-menu-item-active-bg-dark: #{rgba($white, .15)};
 
   // boxed 
   --#{$variable-prefix}boxed-body-bg: #{darken($body-bg, 4%)};
 
   // heading-color
   --#{$variable-prefix}heading-color: #{$gray-700};
-  
+
   // component variable
 
   // theme-color
@@ -78,7 +80,7 @@
   --#{$variable-prefix}link-hover-color: #{$primary};
 
   // Border variable
-  --#{$variable-prefix}border-color:  #{$gray-300};
+  --#{$variable-prefix}border-color: #{$gray-300};
 
   // dropdown
   --#{$variable-prefix}dropdown-bg: #{$white};
