--- a/src/styles/config/default/_variables.scss
+++ b/src/styles/config/default/_variables.scss
@@ -24,20 +24,20 @@ $vertical-menu-bg:                                var(--#{$variable-prefix}verti
 $vertical-menu-box-shadow:                        0 2px 4px rgba(15,34,58,0.12);
 $vertical-menu-border:                            $white;
 $vertical-menu-z-index:                           1002;
-$vertical-menu-item-font-size:                    0.9375rem;
+$vertical-menu-item-font-size:                    1rem; //0.9375rem;
 $vertical-menu-item-font-family:                  $font-family-secondary;
 $vertical-menu-item-color:                        var(--#{$variable-prefix}vertical-menu-item-color);
 $vertical-menu-item-hover-color:                  var(--#{$variable-prefix}vertical-menu-item-hover-color);
 $vertical-menu-item-active-color:                 var(--#{$variable-prefix}vertical-menu-item-active-color);
 $vertical-menu-item-padding-x:                    1.5rem;
-$vertical-menu-item-padding-y:                    0.625rem;
+$vertical-menu-item-padding-y:                    0.325rem;
 $vertical-menu-sub-item-font-size:                0.813rem;
 $vertical-menu-sub-item-font-family:              $font-family-primary;
 $vertical-menu-sub-item-color:                    var(--#{$variable-prefix}vertical-menu-sub-item-color);
 $vertical-menu-sub-item-hover-color:              var(--#{$variable-prefix}vertical-menu-sub-item-hover-color);
 $vertical-menu-sub-item-active-color:             var(--#{$variable-prefix}vertical-menu-sub-item-active-color);
 $vertical-menu-sub-item-padding-x:                1.5rem;
-$vertical-menu-sub-item-padding-y:                0.55rem;
+$vertical-menu-sub-item-padding-y:                0.35rem;
 $vertical-menu-dropdown-box-shadow:               0 2px 4px rgba(15,34,58,0.12);
 $vertical-menu-title-color:                       var(--#{$variable-prefix}vertical-menu-title-color);
 $vertical-menu-item-icon-width:                   1.75rem;
@@ -46,6 +46,8 @@ $vertical-menu-item-icon-width:                   1.75rem;
 $vertical-menu-bg-dark:                         var(--#{$variable-prefix}vertical-menu-bg-dark);
 $vertical-menu-border-dark:                     var(--#{$variable-prefix}vertical-menu-bg-dark);
 $vertical-menu-item-color-dark:                 var(--#{$variable-prefix}vertical-menu-item-color-dark);
+$vertical-menu-item-color-active:               var(--#{$variable-prefix}vertical-menu-item-color-active);
+$vertical-menu-item-color-inActive:             var(--#{$variable-prefix}vertical-menu-item-color-inActive);
 $vertical-menu-item-hover-color-dark:           var(--#{$variable-prefix}vertical-menu-item-hover-color-dark);
 $vertical-menu-item-active-color-dark:          var(--#{$variable-prefix}vertical-menu-item-active-color-dark);
 $vertical-menu-sub-item-color-dark:             var(--#{$variable-prefix}vertical-menu-sub-item-color-dark);
