--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -41,6 +41,10 @@ body {
   margin-bottom: 0.25rem !important;
 }
 
+.input_background_white{
+  background-color: #fff !important;
+}
+
 .noUi-horizontal .noUi-handle {
   height: 16px !important;
   width: 16px !important;
