--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -33,6 +33,14 @@ body {
   object-fit: contain;
 }
 
+.trackingNumber_container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  gap: 4px;
+}
+
 .chargesTitles {
   fill: black !important;
 }
