--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -24,7 +24,7 @@ body {
     outline: none !important;
     font-family: $font-family-primary;
   }
-  input{
+  input, select{
     font-size: 16px !important;
   }
 }
