--- a/src/styles/config/default/_variables.scss
+++ b/src/styles/config/default/_variables.scss
@@ -755,7 +755,8 @@ $font-sizes: (
   3: $h3-font-size,
   4: $h4-font-size,
   5: $h5-font-size,
-  6: $h6-font-size
+  6: $h6-font-size,
+  7: 0.7rem
 );
 // scss-docs-end font-sizes
 
