--- a/src/styles/config/default/_variables.scss
+++ b/src/styles/config/default/_variables.scss
@@ -1453,7 +1453,7 @@ $tooltip-max-width:                 200px;
 $tooltip-color:                     $white;
 $tooltip-bg:                        $black;
 $tooltip-border-radius:             $border-radius-sm;
-$tooltip-opacity:                   .9;
+$tooltip-opacity:                   1;
 $tooltip-padding-y:                 $spacer * .4;
 $tooltip-padding-x:                 $spacer * .7;
 $tooltip-margin:                    0;
