--- a/src/styles/structure/_vertical.scss
+++ b/src/styles/structure/_vertical.scss
@@ -136,7 +136,7 @@
         }
       }
 
-      &[data-bs-toggle='collapse'] {
+      &[data-bs-toggle=collapse] {
         &:after {
           display: block;
           content: '\F0142';
@@ -149,7 +149,7 @@
           color: $vertical-menu-title-color;
         }
 
-        &[aria-expanded='true'] {
+        &[aria-expanded=true] {
           color: $vertical-menu-item-active-color;
 
           .icon-dual {
@@ -377,7 +377,7 @@
     display: none;
   }
 
-  &[data-sidebar-size='sm-hover'] {
+  &[data-sidebar-size=sm-hover] {
     .main-content {
       margin-left: $vertical-menu-width-sm;
 
@@ -536,8 +536,8 @@
     }
   }
 
-  &[data-sidebar-size='sm-hover'],
-  &[data-sidebar-size='sm-hover-active'] {
+  &[data-sidebar-size=sm-hover],
+  &[data-sidebar-size=sm-hover-active] {
     .navbar-header {
       @media (min-width: 1025px) {
         padding-left: $grid-gutter-width;
@@ -545,7 +545,7 @@
     }
   }
 
-  &[data-sidebar-size='sm-hover-active'] {
+  &[data-sidebar-size=sm-hover-active] {
     .navbar-brand-box {
       text-align: left;
     }
@@ -559,7 +559,7 @@
     }
   }
 
-  &[data-sidebar-size='sm'] {
+  &[data-sidebar-size=sm] {
     .logout_container {
       i {
         font-size: 22px;
@@ -744,7 +744,7 @@
     }
   }
 
-  &[data-sidebar-size='md'] {
+  &[data-sidebar-size=md] {
     @media (min-width: 768px) {
       .main-content {
         margin-left: $vertical-menu-width-md;
@@ -781,7 +781,7 @@
             display: none !important;
           }
 
-          &[data-bs-toggle='collapse']:after {
+          &[data-bs-toggle=collapse]:after {
             position: relative;
             display: inline-block;
             right: 0;
@@ -789,7 +789,7 @@
           }
 
           &.menu-link {
-            &[data-bs-toggle='collapse']:after {
+            &[data-bs-toggle=collapse]:after {
               display: none;
             }
           }
@@ -838,12 +838,12 @@
           color: $vertical-menu-item-color-active;
         }
 
-        &[data-bs-toggle='collapse'] {
+        &[data-bs-toggle=collapse] {
           &:after {
             color: inherit;
           }
 
-          &[aria-expanded='true'] {
+          &[aria-expanded=true] {
             color: $vertical-menu-item-active-color-dark;
 
             &:after {
@@ -928,7 +928,7 @@
       }
     }
 
-    &[data-sidebar-size='sm'] {
+    &[data-sidebar-size=sm] {
       .navbar-brand-box {
         background: $vertical-menu-bg-dark;
       }
@@ -1060,7 +1060,7 @@
       }
     }
 
-    &[data-sidebar-size='sm'] {
+    &[data-sidebar-size=sm] {
       @media (min-width: 768px) {
         #layout-wrapper,
         .main-content {
@@ -1116,12 +1116,12 @@
 [dir='rtl'] {
   .navbar-menu {
     .navbar-nav {
-      .nav-link[data-bs-toggle='collapse'] {
+      .nav-link[data-bs-toggle=collapse] {
         &:after {
           transform: rotate(180deg);
         }
 
-        &[aria-expanded='true']:after {
+        &[aria-expanded=true]:after {
           transform: rotate(270deg);
         }
       }
@@ -1157,7 +1157,7 @@
         color: $vertical-menu-item-active-color-dark;
       }
 
-      &[data-bs-toggle='collapse'] {
+      &[data-bs-toggle=collapse] {
         &:after {
           color: inherit;
         }
@@ -1243,7 +1243,7 @@
     }
   }
 
-  &[data-sidebar-size='sm'] {
+  &[data-sidebar-size=sm] {
     .navbar-brand-box {
       background: $vertical-menu-bg-gradient;
     }
