Refactor: Add InboundFBAHistoryModal and integrate FBA shipment history handling in fulfillment components

--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -215,3 +215,11 @@ $value in $theme-colors {
 .capitalize {
   text-transform: capitalize;
 }
+
+.w-fit {
+  width: fit-content;
+}
+
+.tooltip-max-w-none {
+  --bs-tooltip-max-width: none !important;
+}
