Refactor: update marketplace pricing export functionality; improve UI components and styles toast spinner for better usability

--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -210,6 +210,10 @@ $value in $theme-colors {
   .Toastify__close-button--light {
     color: $light;
   }
+  .Toastify__spinner{
+    border-color: #e0e0e0;
+    border-right-color: #616161;
+  }
 }
 
 .capitalize {
