Update some Dependencies and Refactor file upload components and error handling
- Replaced Dropzone component with a custom UploadFileDropzone component in Add_Po_With_File and ReceivingOrderModalUploading for better reusability and maintainability.
- Updated error handling in various components to remove dependency on error messages from the response, simplifying the error messages displayed to users.
- Changed link colors in the default variables SCSS file for a more consistent design.
- Added UploadFileDropzone component to handle file uploads with improved error handling and user feedback.

--- a/src/styles/config/default/_variables.scss
+++ b/src/styles/config/default/_variables.scss
@@ -581,10 +581,10 @@ $utilities-bg-colors: map-loop($utilities-bg, rgba-css-var, "$key", "bg");
 //
 // Style anchor elements.
 
-$link-color:                              var(--#{$variable-prefix}link-color);
+$link-color:                              #4481FD;
 $link-decoration:                         underline;
 $link-shade-percentage:                   20%;
-$link-hover-color:                        var(--#{$variable-prefix}link-hover-color);
+$link-hover-color:                        #4481FD;
 $link-hover-decoration:                   null;
 
 $stretched-link-pseudo-element:           after;
