--- a/src/styles/config/default/bootstrap.scss
+++ b/src/styles/config/default/bootstrap.scss
@@ -10,5 +10,38 @@ File: Custom Bootstrap Css File
 //Core files
 @import 'bootstrap/scss/functions';
 @import 'bootstrap/scss/variables';
+
+@import 'bootstrap/scss/maps';
+@import 'bootstrap/scss/mixins';
+
 @import './variables';
+
+@import 'bootstrap/scss/utilities';
+
+// Extend Bootstrap utilities BEFORE importing bootstrap
+$utilities: map-merge(
+  $utilities,
+  (
+    'width': map-merge(
+        map-get($utilities, 'width'),
+        (
+          values: map-merge(
+              map-get(map-get($utilities, 'width'), values),
+              (
+                10: 10%,
+                20: 20%,
+                30: 30%,
+                40: 40%,
+                60: 60%,
+                70: 70%,
+                80: 80%,
+                90: 90%,
+                120: 120%,
+              )
+            ),
+        )
+      ),
+  )
+);
+
 @import 'bootstrap/scss/bootstrap';
